# django-password-history-plus

./: MANIFEST.in  README.rst  setup.cfg
password_histories/: __init__.py  admin.py  apps.py  models.py  signals.py  utils.py
password_histories/migrations/: 0001_initial.py
