[metadata]
name = django-custom-acccounts-plus
version = 1.0.0
description = A Django package that stores password histories and checks new password with the history
long_description_content_type = text/x-rst
long_description = file: README.rst
url = https://github.com/adu013/django-password-history-plus
author = Arindam Dutta
author_email = "aridutta101010@gmail.com"
license = MIT License
classifiers =
    Environment :: Web Environment
    Framework :: Django
    Framework :: Django :: 2.0
    Framework :: Django :: 3.0
    Framework :: Django :: 4.0
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Internet :: WWW/HTTP
    Topic :: Internet :: WWW/HTTP :: Dynamic Content

[options]
include_package_data = true
packages = find:
